# streaming-data-loader

./: .env.development  .gitignore  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  requirements.txt  sdl-ubuntu.spec  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  distribute.yaml  pyinstaller.yaml  release.yml
capabilities/: default.json
core/: Cargo.toml
core/src/: csv_preview.rs  hydroserver.rs  lib.rs  observation_queue.rs  paths.rs  pipeline.rs  runtime.rs  uploader.rs
core/src/tests/: hydroserver.rs  observation_queue.rs  pipeline.rs  runtime.rs
deploy/macos/: com.hydroserver.sdl.plist
frontend/: App.vue  actions.ts  api.ts  auth-submit.test.ts  auth-submit.ts  config.ts  main.ts  pipeline-submit.test.ts  pipeline-submit.ts  render.ts  router.ts  state.ts  styles.css  time.ts  useAppModel.test.ts  useAuth.test.ts  useMapping.test.ts  usePipeline.test.ts  vite-env.d.ts
frontend/api/: http.ts  index.ts  runtime.ts
frontend/api/app/: client.ts  daemonTransport.ts
frontend/api/hydroserver/: client.ts  daemonTransport.ts  types.ts
frontend/api/os-service/: client.ts  types.ts
frontend/components/: AccountMenuButton.vue  AnimatedLoadingIcon.vue  AuthForm.vue  ConnectedCard.vue  CsvPreview.vue  CsvTransformerSettings.vue  FeedbackBanner.vue  HeaderControls.vue  PipelineMappings.vue  SettingsMenuButton.vue  auth.ts  csv-preview.ts  dashboard.ts  helpers.ts  onboarding-file.ts  onboarding-mapping.ts
frontend/composables/: csvTransformerSettings.ts  state.ts  useAppModel.ts  useAuth.ts  useJobs.ts  useMapping.ts  usePipeline.ts  useService.ts
frontend/models/: timestamp.ts
frontend/tests/: auth-submit.test.ts  pipeline-submit.test.ts  useAppModel.test.ts  useAuth.test.ts  useMapping.test.ts  usePipeline.test.ts
frontend/views/: DashboardView.vue  FatalErrorView.vue  LoadingView.vue  PipelineEditorView.vue  PipelineMappingView.vue  ServiceSetupView.vue  SettingsView.vue  WelcomeView.vue
icons/: icon.icns
install/macos/: com.hydroserver.sdl.plist  install.sh  uninstall.sh
install/windows/: install.ps1  uninstall.ps1
legacy-reference/: .gitignore  package-lock.json  vite.config.ts
legacy-reference/sidecar/: database.py  main.py  models.py  requirements.txt  scheduler.py
legacy-reference/sidecar/alembic/: env.py
legacy-reference/sidecar/routes/: connections.py  runs.py
legacy-reference/src/: App.vue  main.ts
legacy-reference/src/router/: index.ts
legacy-reference/src/views/: TaskDetailView.vue  TasksView.vue
scripts/: bootstrap-frontend.mjs  bootstrap-sidecar.mjs  run-sidecar.mjs  run-tauri.mjs  tauri-dev.mjs
service/: Cargo.toml
service/src/: main.rs
service/src/platform/: windows.rs
sidecar/: main.py  requirements.txt  sdl.spec
sidecar/alembic/versions/: cb5e7dc71a88_initial_schema.py
sidecar/api/: models.py  routes.py
sidecar/core/: config.py  hydroserver.py  loader.py  runtime.py  scheduler.py  state.py
sidecar/routes/: tasks.py
sidecar/tests/: test_hydroserver.py  test_loader.py  test_models.py
src/: HydroLoader.spec  app.py  cli.py  commands.rs  config_store.rs  csv_preview.rs  daemon_api.rs  daemon_launcher.rs  daemon_state.rs  file_watcher.rs  hydroserver.rs  lib.rs  logging.rs  main.rs  models.rs  observation_queue.rs  pipeline.rs  runtime.rs  scheduler.py  service_manager.rs  service_paths.rs  service_runtime.rs  setup.py  timestamp.rs  uploader.rs  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
src/config_store/: app_config.rs  cursors.rs  ids.rs  job_logs.rs  jobs.rs  json_file.rs  mod.rs  workspace_store.rs
src/package/macos/: settings.py
src/service/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/tests/: config_store.rs  daemon_launcher.rs  file_watcher.rs  hydroserver.rs  json_file.rs  lib.rs  pipeline.rs  runtime.rs  service_paths.rs  service_runtime.rs  uploader.rs
src/views/: ConnectionsView.vue
ui/: Cargo.toml  tauri.conf.json
ui/src/: commands.rs  compat.rs  lib.rs
