[package]
name = "streaming-data-loader"
version = "2.0.0-beta.1"
description = "Desktop app for loading streaming CSV observations into HydroServer"
authors = ["Daniel Slaugh", "Ken Lippold"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/hydroserver2/streaming-data-loader"
homepage = "https://github.com/hydroserver2/streaming-data-loader"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "streaming_data_loader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
csv = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
notify = "6"
notify-debouncer-mini = "0.4.1"
governor = { version = "0.7", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
