[package]
name = "sdl-core"
version = "2.0.0-beta.3"
description = "Shared library for the HydroServer Streaming Data Loader"
authors = ["Daniel Slaugh", "Ken Lippold"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
csv = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
notify = "6"
notify-debouncer-mini = "0.4.1"
governor = { version = "0.7", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
