[package]
name = "sdl-service"
version = "2.0.0-beta.3"
description = "Headless system service for the HydroServer Streaming Data Loader"
authors = ["Daniel Slaugh", "Ken Lippold"]
edition = "2021"
publish = false

[[bin]]
name = "sdl-service"
path = "src/main.rs"

[dependencies]
sdl-core = { path = "../core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
