[package]
name = "streaming-data-loader"
version = "2.0.0-beta.3"
description = "Desktop app for loading streaming CSV observations into HydroServer"
authors = ["Daniel Slaugh", "Ken Lippold"]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/hydroserver2/streaming-data-loader"
homepage = "https://github.com/hydroserver2/streaming-data-loader"
publish = false

[lib]
name = "streaming_data_loader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sdl-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
